--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Erik Elebro",
+	"description": "Learning microservices and API",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -13,6 +14,6 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://idontknow/todo.git"
+		"url": "https://github.com/erkanmanubles/microservices.git"
 	}
 }
